Fix overflow issue with buttons after the last change

--- a/src/assets/scss/components/_alert.scss
+++ b/src/assets/scss/components/_alert.scss
@@ -167,7 +167,8 @@ Alert styling.
 
 	&.inset-banner {
 
-        padding-top: 1rem;
+        padding-top: 2rem;
+        padding-bottom: 1rem;
         overflow: auto;
 		
 		.vl-alert-button {
